# SecureApp

./: CHANGELOG.md  LICENSE  README.md  changelog.py
.github/workflows/: python_script.yml
SecureApp/: CMakeLists.txt  users.db
SecureApp/include/: Database.cpp  Database.h
SecureApp/include/gui/: MainWindow.xaml.h
SecureApp/include/utils/: CryptoUtils.h
SecureApp/src/: main.cpp
SecureApp/src/gui/: MainWindow.xaml.cpp  MainWindow.xaml.h
SecureApp/src/utils/: CryptoUtils.cpp  CryptoUtils.h
